Fixed review findings.